fix: Resolve problema de rota de pastas

--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Controle de Clientes</title>
   </head>
   <body>
     <main>
       <section>
         <h1>Controle de Clientes</h1>
         <a href="/clientes">Listar</a>
-        <a href="/clientes/form">Cadastrar</a>
+        <a href="/clientes/novo">Cadastrar</a>
       </section>
     </main>
   </body>
