--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Controle de Clientes</title>
+    <link rel="stylesheet" href="../css/index.css" />
   </head>
   <body>
     <main>
       <section>
         <h1>Controle de Clientes</h1>
-        <a href="/clientes">Listar</a>
-        <a href="/clientes/novo">Cadastrar</a>
+        <ul>
+          <li><a href="/clientes">Listar</a></li>
+          <li><a href="/clientes/novo">Cadastrar</a></li>
+        </ul>
       </section>
     </main>
   </body>
