feat: Atualiza o nome das rotas get e post com /api no início

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       <section>
         <h1>Controle de Clientes</h1>
         <ul>
-          <li><a href="/clientes">Listar</a></li>
+          <li><a href="/clientes/cadastrados">Listar</a></li>
           <li><a href="/clientes/novo">Cadastrar</a></li>
         </ul>
       </section>
