fix: Resolve o erro de variável de ambiente

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <main>
       <section>
         <h1>Controle de Clientes</h1>
-        <ul>
+        <ul class="menu">
           <li><a href="/clientes">Listar</a></li>
           <li><a href="/clientes/novo">Cadastrar</a></li>
         </ul>
